# src/users/dtos/logout-response.dto.ts
@@ -1,0 +1,6 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class LogoutResponseDto {
+    @ApiProperty({ example: true })
+    success: boolean;
+}
