# src/users/dtos/success-response.dto.ts
@@ -1,0 +1,6 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class SuccessResponseDto {
+    @ApiProperty({ example: true })
+    success: boolean;
+}
